# OpenGnsys

./: .gitignore  README.md  checkrepo  doxyfile
EAC/: INSTALL  (+1 more)
admin/Sources/Services/ogAdmServer/: Makefile  Makefile.am  configure.ac  ogAdmServer.cfg
admin/Sources/Services/ogAdmServer/misc/: ogadmserver.service
admin/Sources/Services/ogAdmServer/sources/: dbi.c  dbi.h  list.h  ogAdmLib.c  ogAdmLib.h  ogAdmServer.c  ogAdmServer.cpp  ogAdmServer.h  schedule.c  schedule.h  utils.c  utils.h
admin/Sources/Services/ogAdmServer/tests/: clients.json  create_basic_image.json  create_image.json  create_incremental_image.json  create_schedule.json  post_shell_output.json  post_shell_run.json  reboot.json  restore_basic_image.json  restore_image.json  restore_incremental_image.json  run-tests.py  run-tests.sh  run_schedule.json  session.json  setup_image.json  task.json  wol.json
admin/Sources/Services/ogAdmServer/tests/config/: ogAdmServer.cfg
admin/Sources/Services/ogAdmServer/tests/units/: 0001-get-clients.py  0002-post-clients.py  0003-post-wol.py  0004-post-shell-run.py  0005-post-shell-output.py  0006-post-session.py  test_0001_get_clients.py  test_0002_post_clients.py  test_0003_post_wol.py  test_0004_post_shell_run.py  test_0005_post_shell_output.py  test_0006_post_session.py  test_0007_post_poweroff.py  test_0008_post_reboot.py  test_0009_post_stop.py  test_0010_post_refresh.py  test_0011_post_hardware.py  test_0012_post_software.py  test_0013_nonexistent.py  test_0014_big_request.py  test_0015_wrong_headers.py  test_0016_post_image_create.py  test_0017_post_image_restore.py  test_0018_post_image_setup.py  (+6 more)
client/browser/: CMakeLists.txt  browser.pro  clean  mainwindow.cpp  mainwindow.h
client/browser/digitalclock/: digitalclock.pro
client/browser/po/: ca.po  en.po  messages.pot
client/browser/qtermwidget/: CMakeLists.txt  README  qtermwidget.pro
client/browser/qtermwidget/src/: Emulation.cpp  Filter.cpp  Pty.cpp  ScreenWindow.cpp  Session.cpp  TerminalDisplay.cpp  Vt102Emulation.cpp  k3process.cpp  k3processcontroller.cpp  qtermwidget.cpp  src.pro
client/browser/src/: main.cpp  mainwindow.cpp  mainwindow.h  src.pro
(+4070 files in other folders)
